Fix Invalid CORS request by removing duplicate CorsFilter.
Use a single Security CORS config with origin patterns, allow PATCH, disable credentials for JWT APIs, and permit payment webhooks.

Co-authored-by: Cursor <cursoragent@cursor.com>