@@ -2,9 +2,11 @@ package com.smart.parking.config;
 
 import com.smart.parking.security.JwtAuthFilter;
 import lombok.RequiredArgsConstructor;
-import org.springframework.context.annotation.*;
-import org.springframework.security.authentication.*;
-import org.springframework.security.config.annotation.authentication.configuration.*;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -12,12 +14,13 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.web.*;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
@@ -34,7 +37,7 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         return http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
+            .csrf(AbstractHttpConfigurer::disable)
             .formLogin(AbstractHttpConfigurer::disable)
             .httpBasic(AbstractHttpConfigurer::disable)
             .sessionManagement(sm ->
@@ -55,14 +58,22 @@ public class SecurityConfig {
                     "/v3/api-docs/**",
                     "/swagger-resources/**",
                     "/webjars/**",
-                    "/error"
+                    "/error",
+                    "/payments/webhook"
                 ).permitAll()
                 .requestMatchers(HttpMethod.GET, "/parking-spaces/mine").authenticated()
-                .requestMatchers(HttpMethod.GET, "/parking-spaces", "/parking-spaces/", "/parking-spaces/nearby", "/parking-spaces/event/*", "/parking-spaces/*", "/events/active").permitAll()
+                .requestMatchers(
+                    HttpMethod.GET,
+                    "/parking-spaces",
+                    "/parking-spaces/",
+                    "/parking-spaces/nearby",
+                    "/parking-spaces/event/*",
+                    "/parking-spaces/*",
+                    "/events/active"
+                ).permitAll()
                 .anyRequest().authenticated()
             )
-            .addFilterBefore(jwtAuthFilter,
-                UsernamePasswordAuthenticationFilter.class)
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
             .build();
     }
 
@@ -72,18 +83,19 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authManager(
-            AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(resolveAllowedOrigins());
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
+        configuration.setAllowedOriginPatterns(resolveAllowedOriginPatterns());
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        // JWT is sent in Authorization header; cookies are not required.
+        configuration.setAllowCredentials(false);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -91,19 +103,23 @@ public class SecurityConfig {
         return source;
     }
 
-    private List<String> resolveAllowedOrigins() {
-        String frontendOrigins = System.getenv("ALLOWED_ORIGINS");
-        Stream<String> configuredOrigins = frontendOrigins == null || frontendOrigins.isBlank()
-                ? Stream.of("https://yourdomain.vercel.app")
-                : Arrays.stream(frontendOrigins.split(","));
+    private List<String> resolveAllowedOriginPatterns() {
+        List<String> patterns = new ArrayList<>(List.of(
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "https://*.vercel.app",
+                "https://*.onrender.com"
+        ));
 
-        return Stream.concat(
-                        Stream.of("http://localhost:3000", "http://localhost:5173"),
-                        configuredOrigins
-                )
-                .map(String::trim)
-                .map(origin -> origin.endsWith("/") ? origin.substring(0, origin.length() - 1) : origin)
-                .distinct()
-                .toList();
+        String frontendOrigins = System.getenv("ALLOWED_ORIGINS");
+        if (frontendOrigins != null && !frontendOrigins.isBlank()) {
+            Arrays.stream(frontendOrigins.split(","))
+                    .map(String::trim)
+                    .filter(origin -> !origin.isEmpty())
+                    .map(origin -> origin.endsWith("/") ? origin.substring(0, origin.length() - 1) : origin)
+                    .forEach(patterns::add);
+        }
+
+        return patterns.stream().distinct().toList();
     }
 }
